analytics/manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-server-lb
  namespace: analytics
spec:
  selector:
    app: analytics-server
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
