analytics/manifests/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-server 
  namespace: analytics
spec:
  selector:
    app: analytics-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
