analytics/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  namespace: analytics
  annotations:
    kubernetes.io/ingress.global-static-ip-name: analytics3
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: analytics-server
      port:
        number: 80
